Move most widths into CSS

--- a/templates/activeusers.twig
+++ b/templates/activeusers.twig
@@ -12,11 +12,11 @@
 </table><br>
 <table class="c1">
 	<tr class="h">
-		<td style="width:32px">#</td>
+		<td class="w-32px">#</td>
 		<td>{{ __("Username") }}</td>
-		<td class="nom" style="width:140px">{{ __("Registered on") }}</td>
-		<td style="width:50px">{{ __("Posts") }}</td>
-		<td style="width:50px">{{ __("Total") }}</td>
+		<td class="nom w-140px">{{ __("Registered on") }}</td>
+		<td class="w-60px">{{ __("Posts") }}</td>
+		<td class="w-60px">{{ __("Total") }}</td>
 	</tr>
 	{% set i = 1 %}
 	{% for user in users %}
