--- a/templates/memberlist.twig
+++ b/templates/memberlist.twig
@@ -5,11 +5,11 @@
 	{% block content %}
 <table class="c1">
 	<tr class="h">
-		<td style="width:32px">#</td>
-		<td style="width:62px">{{ __("Picture") }}</td>
+		<td class="w-32px">#</td>
+		<td class="w-64px">{{ __("Picture") }}</td>
 		<td>{{ __("Name") }}</td>
-		<td class="nom" style="width:140px">{{ __("Registered on") }}</td>
-		<td style="width:50px">{{ __("Posts") }}</td>
+		<td class="nom w-140px">{{ __("Registered on") }}</td>
+		<td class="w-60px">{{ __("Posts") }}</td>
 	</tr>
 {% for user in users %}
 	<tr class="n1 center" style="height:75px">
