--- a/templates/search.twig
+++ b/templates/search.twig
@@ -32,8 +32,8 @@
 		<tr class="h"><td colspan="3">{{ __("Results:") }}</td></tr>
 		<tr class="c">
 			<td>{{ __("Title") }}</td>
-			<td style="width:150px">{{ __("Started by") }}</td>
-			<td style="width:180px">{{ __("Date") }}</td>
+			<td class="w-150px">{{ __("Started by") }}</td>
+			<td class="w-150px">{{ __("Date") }}</td>
 		</tr>
 		{% set i = 1 %}
 		{% for thread in threads %}
