--- a/scss/style.scss
+++ b/scss/style.scss
@@ -80,6 +80,18 @@ a:active, a:hover	{ color: #FFFFFF }
 .float-left { float: left; }
 .float-right { float: right; }
 
+.w-30px  { width: 30px;  }
+.w-32px  { width: 32px;  }
+.w-60px  { width: 60px;  }
+.w-64px  { width: 64px;  }
+.w-120px { width: 120px; }
+.w-130px { width: 130px; }
+.w-140px { width: 140px; }
+.w-150px { width: 150px; }
+.w-175px { width: 175px; }
+.w-180px { width: 180px; }
+.h-40px  { height: 40px; }
+
 .two-columns {
 	display: block;
 
@@ -136,7 +148,7 @@ a:active, a:hover	{ color: #FFFFFF }
 }
 
 .pagination {
-	margin: 1.75em 10px;
+	margin: 1.5em 10px;
 
 	span {
 		padding: 0 5px;
