--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -8,7 +8,7 @@
 
 	{# inline font styling - update from /static/css/fonts.css #}
 	<style>@font-face{font-family:"Open Sans";font-style:normal;font-weight:400;font-display:swap;src:local(""),url("fonts/open-sans-v34-400.woff2") format("woff2"),url("fonts/open-sans-v34-400.woff") format("woff")}@font-face{font-family:"Open Sans";font-style:normal;font-weight:700;font-display:swap;src:local(""),url("fonts/open-sans-v34-700.woff2") format("woff2"),url("fonts/open-sans-v34-700.woff") format("woff")}</style>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css?v=2">
 	<link rel="stylesheet" href="themes/{{ userdata.theme }}/style.css">
 
 	<link href="rss" type="application/atom+xml" rel="alternate">
